# shockhash-et-alia

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakeListsOld.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  gprof report.txt  hashing_algos
Testing/Temporary/: CTestCostData.txt
code/recsplit/: a.out  addresses.txt  main  main.cpp  names.txt
code/recsplit/main.dSYM/Contents/Resources/DWARF/: main
code/recsplit/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
code/sichash/: main.cpp
data/: dataset_fetcher.py  gprof-recsplit-report-3.txt  gprof-report-recsplit-1.txt  names.txt  out-10.folded  out.folded  perf-report-3.txt  perf-report.txt  perf.data  perf.data.old  requirements.txt  shakespeare_parser.py
data/results/: burr-10000000.csv  burr-100000000.csv  burr-data.py  recsplit-1000000-16-length-string.csv  recsplit-1000000-2.csv  recsplit-1000000-main-1.csv  recsplit-1000000.csv  recsplit-10000000.csv  recsplit-3d-bpk-b-l-100000-old-with-profiling.csv  recsplit-3d-bpk-b-l-100000.csv  recsplit-3d-bpk-b-l.csv  recsplit-5-5.csv  recsplit-main-main.csv  shockhash-1000000-1.csv  shockhash-1000000-2-1.csv  shockhash-1000000-2.csv  shockhash-1000000-3-1.csv  shockhash-6-6.csv  shockhash_data.py  sichash-1000000-1.csv  sichash-1000000-2.csv  sichash-1000000-3.csv  sichash-1000000-budget-2.csv  sichash-1000000-budget.csv  sichash-1000000.csv
include/algos/: hash_function.h  recsplit.h  shockhash.h  shockhash_rs.h  sichash.h
include/common/: bloom_filter.h  broadword.h  bucket_ribbon.h  burr.h  elias_fano.h  golomb_rice.h  murmurhash.h  ribbon.h  test.h  utils.h
src/: main.cpp
src/algos/: recsplit.cpp  shockhash-rs.cpp  shockhash.cpp  sichash-optimised.cpp  sichash.cpp
src/common/: MurmurHash3.cpp  broadword.cpp  bucket_ribbon.cpp  elias_fano.cpp  golomb_rice.cpp  golomb_rice.test.cpp  murmurhash.cpp  ribbon.cpp  test.cpp  utils.cpp
tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_broadword  test_elias_fano  test_golomb_rice  test_ribbon
tests/Testing/Temporary/: CTestCostData.txt
tests/common/: broadword.test.cpp  elias_fano.test.cpp  golomb_rice.test.cpp  ribbon.test.cpp
